# omara-art

./: .gitignore  README.md
assets/: README.md
assets/boot-theme/: generate.sh  generate_assets.py  omara-boot.plymouth
assets/brand/: README.md  omara-ascii.txt  omara.txt
screensavers/: Cargo.toml  README.md
screensavers/garden/: Cargo.toml
screensavers/garden/src/: main.rs
screensavers/party/: Cargo.toml
screensavers/party/src/: main.rs
screensavers/retro/: Cargo.toml
screensavers/retro/src/: main.rs
screensavers/singularity/: Cargo.toml
screensavers/singularity/src/: main.rs
screensavers/src/: branding.rs  effect.rs  lib.rs
screensavers/src/effects/: beams.rs  matrix.rs  mod.rs  pour.rs  unstable.rs
screensavers/wormhole/: Cargo.toml
screensavers/wormhole/src/: main.rs
wallpapers/: README.md  generate.sh
