[package]
name = "omara-screensavers"
version = "0.1.0"
edition = "2021"
authors = ["Omara OS"]
description = "Collection of beautiful terminal screensavers for Omara OS (inspired by Omarchy style)"
license = "MIT"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.29"
rand = "0.9"
dirs = "6.0"

[[bin]]
name = "omara-matrix"
path = "src/bin/omara-matrix.rs"

[[bin]]
name = "omara-beams"
path = "src/bin/omara-beams.rs"

[[bin]]
name = "omara-unstable"
path = "src/bin/omara-unstable.rs"

[[bin]]
name = "omara-pour"
path = "src/bin/omara-pour.rs"

[[bin]]
name = "omara-bounce"
path = "src/bin/omara-bounce.rs"

# Add more here as you create new ones (Fire, Synthgrid, Swarm, etc.)

[profile.release]
opt-level = 3
lto = true
strip = true
